# JSON_library

./: .gitignore  CMakeLists.txt  CMakelists.txt  README.md  compile_commands.json  version.h.in
.cache/clangd/index/: Json_Serializator.h.319889A952CA2BE4.idx  Json_Writer.h.ACD24E4E1AEF4440.idx  Serializer.h.E0A3E02B06C986FA.idx  concepts.h.479827844A78082F.idx  testing.cpp.05B2A64C0C5F0EF6.idx  ts_basic.cpp.3B00E0A8E10E031F.idx
include/: Json_Serializator.h  Json_Writer.h  Serializer.h  concepts.h
test/: CMakeLists.txt  ts_basic.cpp  ts_described.cpp  ts_overloading.cpp
